--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.datasource.url=jdbc:h2:file:./db/filmorate
 spring.datasource.driverClassName=org.h2.Driver
 spring.h2.console.enabled=true
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=
